# HighPerformanceComputing-LatticeBoltzmannMethod

./: CMakeLists.txt  README.md  lbm_solver.cpp  lmb-vis.py  main.cpp
Data Output/: simulation_params.csv  velocity_field.csv  velocity_profile.csv
include/: LBMConfig.h  LBMGrid.h  LBMIO.h  LBMSolver.h  LBMTimeEvolution.h  LBMUtils.h
scripts/: lift.py  time_evolution.py  visualise_results.py
src/: main.cpp  unoptimal.cpp
